force-app/main/default/objects/Lead/fields/BC_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>BC_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>Campo Externo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>