force-app/main/default/objects/Lead/fields/Precio_Maximo__c.field-meta.xml
<CustomField>
    <fullName>Precio_Maximo__c</fullName>
    <label>Precio_Maximo</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>