force-app/main/default/objects/Lead/fields/Precio_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo__c</fullName>
    <label>Precio Minimo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>